playCard controller alignment fix

--- a/newUI/styles.css
+++ b/newUI/styles.css
@@ -134,7 +134,6 @@ div.playButtonCard {
     grid-gap: 10px;
     align-items: center;
     grid-template-columns: repeat(3, 1fr);
-
 }
 
 .playButtonsGrid {
@@ -145,7 +144,7 @@ div.playButtonCard {
     display: grid;
     cursor: pointer;
     align-items: center;
-    grid-template-columns: repeat(7, 1fr);
+    grid-template-columns: repeat(5, 1fr);
     border-radius: .5rem;
 }
 
